deploy/kyverno/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kyverno
  labels:
    app: kyverno
