deploy/kyverno/base/policy-acend-ns-label.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-ci-bot-label-to-acend-ns
  annotations:
    policies.kyverno.io/title: Add ci-bot Label to acend namespaces
    policies.kyverno.io/category: Other
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Namespace
    kyverno.io/kyverno-version: 1.7.0
    policies.kyverno.io/minversion: 1.7.0
    kyverno.io/kubernetes-version: "1.23"
    policies.kyverno.io/description: >-
      Add the ci-bot: true label to all namespaces starting with `acend-*`    
spec:
 # mutateExistingOnPolicyUpdate: true
  rules:
  - name: label-acend-namespaces
    match:
      any:
      - resources:
          names:
          - "acend-*"
          kinds:
          - Namespace
    mutate:
      targets:
        - apiVersion: v1
          kind: Namespace
      patchStrategicMerge:
        metadata:
          labels:
            ci-bot: "true"
